--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -59,7 +59,7 @@
                         {% if 'Administrators' in session['groups'] %}
                             <li>
                                 <a href="{{ url_for('BethelAlertView:index') }}">
-                                    <i class="fa fa-file" aria-hidden="true"></i>
+                                    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                                     <p class="admin-list-item">Bethel Alert</p>
                                 </a>
                             </li>
