missed the title

--- a/tinker/templates/admin/bethel_alert/home.html
+++ b/tinker/templates/admin/bethel_alert/home.html
@@ -2,7 +2,7 @@
 
 {% set title = 'Bethel Alert' %}
 
-{% block title %}Program Search Tags{% endblock %}
+{% block title %}Bethel Alert - Clear Cache{% endblock %}
 
 {% block styles %}
 {% endblock %}
