add in semicolons to js

--- a/tinker/templates/events/form.html
+++ b/tinker/templates/events/form.html
@@ -45,24 +45,24 @@
 
             if (reverse_logic == true) {
                 if (document.getElementById(noend).checked) {
-                    document.getElementById(endlabel).style.display = 'block'
-                    document.getElementById(end).style.display = 'block'
+                    document.getElementById(endlabel).style.display = 'block';
+                    document.getElementById(end).style.display = 'block';
                 }
                 else {
                     document.getElementById(end).value = '';
-                    document.getElementById(endlabel).style.display = 'none'
-                    document.getElementById(end).style.display = 'none'
+                    document.getElementById(endlabel).style.display = 'none';
+                    document.getElementById(end).style.display = 'none';
                 }
             }
             else {
                 if (document.getElementById(noend).checked) {
                     document.getElementById(end).value = '';
-                    document.getElementById(endlabel).style.display = 'none'
-                    document.getElementById(end).style.display = 'none'
+                    document.getElementById(endlabel).style.display = 'none';
+                    document.getElementById(end).style.display = 'none';
                 }
                 else {
-                    document.getElementById(endlabel).style.display = 'block'
-                    document.getElementById(end).style.display = 'block'
+                    document.getElementById(endlabel).style.display = 'block';
+                    document.getElementById(end).style.display = 'block';
                 }
             }
         }
