--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -583,13 +583,14 @@ label {
 }
 
 .redirect-table th:nth-child(1),
-.redirect-table th:nth-child(4){
-    width: 10%;
+.redirect-table th:nth-child(5){
+    width: 12.25%;
 }
 
 .redirect-table th:nth-child(2),
-.redirect-table th:nth-child(3){
-    width: 40%;
+.redirect-table th:nth-child(3),
+.redirect-table th:nth-child(4){
+    width: 25%;
 }
 
 .redirect-btn{
