--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -74,6 +74,7 @@
                         <th>Info</th>
                         <th>From Path</th>
                         <th>To URL</th>
+                        <th>Notes</th>
                         <th>Delete</th>
                     </tr>
                     </thead>
