add back in span

--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -441,6 +441,7 @@
                         <tr>
                             <th>Notes:</th>
                             <td>
+                                <span id="modal-edit-notes-display" class="display">No notes were loaded</span>
                                 <input type="text" id="modal-edit-notes" class="edit"/>
                             </td>
                         </tr>
