remove mistaken character

--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -26,7 +26,7 @@
                                     </li>
                                 {% else %}
                                     <li>
-                                        <a href="{{ url_for('EAnnouncementsView:edit', e_announcement_id=form.id) }}"#}
+                                        <a href="{{ url_for('EAnnouncementsView:edit', e_announcement_id=form.id) }}"
                                            class="btn btn-primary">Edit</a>
                                     </li>
                                 {% endif %}
