--- a/tinker/templates/e-announcements/form.html
+++ b/tinker/templates/e-announcements/form.html
@@ -32,8 +32,9 @@
 {% block main_content %}
     <div class="content">
         <div class="container-fluid row">
+            {# The onsubmit code is to prevent the form submitting multiple times. #}
             <form id="eannouncementform" action="{{ url_for('EAnnouncementsView:submit') }}"
-                      method="post" enctype="multipart/form-data">
+                      method="post" enctype="multipart/form-data" onsubmit="return (typeof submitted == 'undefined') ? (submitted = true) : !submitted">
             {% if not new_form %}
                 <input type="hidden" name="e_announcement_id" id="e_announcement_id" value="{{ e_announcement_id }}"/>
             {% endif %}
