--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -25,7 +25,7 @@ to be in it's own card div, something to think about in the future -->
                 <h3 class="subtitle">Edit Your Bio</h3>
                 <hr/>
 
-                <form id="facultybioform" action="{{ url_for('FacultyBiosView:submit') }}" method="post" enctype="multipart/form-data">
+                <form id="facultybioform" action="{{ url_for('FacultyBiosView:submit') }}" method="post" enctype="multipart/form-data" onsubmit="return (typeof submitted == 'undefined') ? (submitted = true) : !submitted">
                     <input type="hidden" name="faculty_bio_id" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
 
                     {% if form.errors %}
