update documentation for the metadata sync

--- a/tinker/templates/admin/sync/home.html
+++ b/tinker/templates/admin/sync/home.html
@@ -33,6 +33,9 @@
                     The sync data is contained in this <a target="_blank"
                                                          href="https://github.com/betheluniversity/tinker/blob/master/tinker/admin/sync/sync_metadata.py">file</a>.
                     You can sync a specific metadata set, data definition, or sync all.
+                    <br/><br/>
+                    Before you remove a metadata value, add the new value so you have both values. This will make the Cascade migration easier.
+                    Then migrate the values in Cascade. Finally, come back here to remove the old value.
                 </p>
 
                 <div>
