--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -81,8 +81,10 @@
                                 <a href="{{ url_for('UserRolesView:index') }}">
                                     <i class="fa fa-user-secret" aria-hidden="true"></i>
                                     <p class="admin-list-item">User Test Roles</p>
-                                     doesnt work locally
-                                     local session cookie not being stored
+                                    {% if 'xp' not in config['ENVIRON'] and 'prod' not in config['ENVIRON'] %}
+                                        doesn't work locally;
+                                        local session cookie not being stored
+                                    {% endif %}
                                 </a>
                             </li>
                         {% endif %}
