--- a/tinker/templates/creative_tim_footer.html
+++ b/tinker/templates/creative_tim_footer.html
@@ -8,7 +8,7 @@
                     <div class="row">
                         <div class="large-6 columns">
                             <p id="school-name">&copy; Bethel University</p>
-                            <!-- logged in as {{session.get('username', 'no user')}}
+                            <!-- logged in as {{session.get('username', 'no user')}} -->
                         </div>
                     </div>
                 </div>
