Added formmethod attribute to submit buttons

--- a/tinker/templates/e-announcements/form.html
+++ b/tinker/templates/e-announcements/form.html
@@ -145,7 +145,7 @@
                 {% endif %}
                 </br>
             {% endfor %}
-            <button type="submit" id="e-announcement-submit-btn" class="btn btn-primary">Submit</button>
+            <button type="submit" formmethod="post" id="e-announcement-submit-btn" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
