--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -117,7 +117,7 @@ to be in it's own card div, something to think about in the future -->
                         {% endif %}
                     {% endfor %}
 
-                    <button type="submit" id="faculty-bio-submit-btn" class="btn btn-primary">Submit</button>
+                    <button type="submit" formmethod="post" id="faculty-bio-submit-btn" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
