--- a/tinker/templates/office-hours/form.html
+++ b/tinker/templates/office-hours/form.html
@@ -170,7 +170,7 @@
                     <br/>
                     <br/>
                     <div class="col-md-12 less-left-margin">
-                        <button type="submit" id="office-hours-submit-btn" class="btn btn-primary postfix">Submit</button>
+                        <button type="submit" formmethod="post" id="office-hours-submit-btn" class="btn btn-primary postfix">Submit</button>
                     </div>
                 </form>
             </div>
