--- a/tinker/templates/events/form.html
+++ b/tinker/templates/events/form.html
@@ -157,7 +157,7 @@
                     {% endif %}
 
                 {% endfor %}
-                <button type="submit" id="event-submit-btn" class="btn btn-primary">Submit</button>
+                <button type="submit" formmethod="post" id="event-submit-btn" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
