changed form logic for graduate faculty bios

--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -507,7 +507,7 @@ to be in it's own card div, something to think about in the future -->
 
                 addProgramLogic('undergrad', 'dept-chair-div', 'dept-chair');
                 addProgramLogic('adult-undergrad', 'program-director-div', 'program-director');
-                addProgramLogic('graduate', 'program-director-div', 'program-director');
+                addProgramLogic('graduate', 'lead-faculty-div', 'lead-faculty');
                 addProgramLogic('seminary', 'lead-faculty-div', 'lead-faculty');
 
                 function addLeadLogic(identifier) {
